# opcua-simulator

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  README.md  compose.yaml  pyproject.toml
.github/workflows/: publish-image.yaml
config/: examples.yaml  simulator.yaml
frontend/: package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  styles.css
src/: __init__.py  main.py
src/application/: __init__.py  runtime.py  simulator.py
src/dev/: __init__.py  simulator_tui.py
src/domain/: __init__.py  models.py
src/infrastructure/: __init__.py  asyncua_compat.py  config.py  logger.py  opcua_browser.py  opcua_server.py  web.py
tests/: test_main.py
tests/application/: test_runtime.py  test_simulator.py
tests/domain/: test_models.py
tests/infrastructure/: test_config.py  test_web.py
tests/integration/: test_opcua_server.py
